--- a/index.css
+++ b/index.css
@@ -377,11 +377,13 @@
         font-size: 1em;
     }
     .about > a {
-        display: none;
         font-size: 2.9em;
         position: absolute;
-        bottom: 0.1em;
+        bottom: -16em;
         color: white;
         transition: all 0.3s ease-in 0.1s;
+    }
+    .about > a:hover {
+        font-size: 3em;
     }
 }
